--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -2509,9 +2509,14 @@ color: #000000;
 
 #contact-us-office-info{
   background: #212121; 
+ /* display: flex;
+  flex-direction: row;
+  justify-content: center;*/
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  position: absolute;
 }
 
 .offices_div{
@@ -2545,6 +2550,21 @@ color: #000000;
 }
 
 .construction-lines-office{
-  color:white;
+  border: 0.5px solid #FFFFFF;
+  transform: rotate(90deg);
+  width: 7%;
+  margin: 0px -7%;
+}
+
+#second_offices_div{
+  margin-left: 0%;
+}
+
+#third_offices_div{
+  margin-left: 0%;
+}
+
+.contacts_svg{
+  margin-top:-3px;
 }
 /* Fim Contacta-nos Section */
