--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -255,7 +255,7 @@ nav ul li a {
   margin-left: 22px;
   padding-top: 16px;
 }
-#first-hr{
+#first-hr, #first-hr-sections{
   border: 0;
   clear: both;
   display: block;
@@ -2235,13 +2235,28 @@ color: #000000;
 }
 
 .carousel-control-prev-icon {
-  /* Alterar para seta vermelha - pedir */
-  background-image: url("../img/arrow_back_ios_24px.svg");
+  background-image: url("../img/arrow-left-projects.svg");
 }
   
 .carousel-control-next-icon {
-  background-image: url("../img/arrow_back_ios_24px-1.svg");
+  background-image: url("../img/arrow-rigth-projects.svg");
 }
+
+@media(min-width: 993px) {
+  .carousel-control-projects:hover .carousel-control-next-icon{
+      background-image: url("../img/arrow-rigth-projects-hover.svg");
+  }
+
+  .carousel-control-projects:hover .carousel-control-prev-icon{
+      background-image: url("../img/arrow-left-projects-hover.svg");
+  }
+
+  .carousel-control-next-icon, .carousel-control-prev-icon {
+      width: 55px;
+      height: 55px;
+  }
+}
+
 
 @media(max-width: 1300px) {
   .projects-elipse{
@@ -2317,10 +2332,10 @@ color: #000000;
       padding-bottom: 50px;
       background-color: #ED1C23;
   }
-  .carousel-indicators li{
+  .carousel-indicators-white li{
       background-color: rgba(255, 255, 255, 0.38);
     }
-    .carousel-indicators .active{
+    .carousel-indicators-white .active{
       background-color: #FFFFFF;
   }
   .project-item-text-1{
@@ -2346,26 +2361,6 @@ color: #000000;
 }
 
 /* FIM SECÇÃO NOSSOS PROJETOS */
-
-
-
-/* INICIO SECÇÃO REVIEWS */
-
-.section-reviews{
-  height: 100px;
-  background-color: #F5F5F5;
-
-
-
-
-}
-
-
-
-
-
-
- /* FIM SECÇÃO REVIEWS */
 
 
 
@@ -2445,6 +2440,188 @@ color: #000000;
 }
 
 
+/* Inicio Secção Reviews com Preview */
+.section-reviews{
+  background-color: #F5F5F5;
+}
+#carouseReviews{
+  position: relative;
+}
+
+#carouseReviews .carousel-inner .prev .review-item, #carouseReviews .carousel-inner .next .review-item{
+  padding: 20px 30px;
+  margin-top: 20px;
+}
+
+
+
+#carouseReviews .carousel-inner .prev{
+  width: 100%;
+  z-index: 0;
+  display: block;
+  opacity: 0.4;
+  position: absolute;
+  right: 22%;
+  margin:0px;
+}
+#carouseReviews .carousel-inner .next{
+  width: 100%;
+  position: absolute;
+  z-index: 0;
+  display: block;
+  opacity: 0.4;
+  left: 22%;
+  margin:0px;
+}
+#carouseReviews .carousel-inner{
+  width: 100%;
+}
+#carouseReviews .carousel-inner .carousel-item{
+  width: 100%;
+  background-color: initial;
+  
+}
+#carouseReviews .carousel-inner .active{
+  
+  z-index: 1;
+  
+}
+
+.review-item{
+  padding: 50px 30px 30px;
+  width: 25%;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+}
+.review-header{
+  display: flex;
+  justify-content: center;
+}
+.review-header img{
+  border-radius: 50%;
+  margin-top:-10px;
+  margin-right: 4%;
+  margin-left: -15%;
+}
+.review-header-name{
+  margin: 10px 0px;
+  font-family: Ubuntu;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 24px;
+  color: #212121;
+}
+.review-header-role{
+  margin: 10px 0px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.4px;
+}
+.review-content-text{
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.5px;
+  color: #212121;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.review-logo{
+  text-align: center;
+}
+
+.carousel-control-prev-icon-reviews {
+  background-image: url("../img/arrow-reviews-left.svg");
+  width: 55px;
+  height: 55px;
+}
+.carousel-control-reviews:hover .carousel-control-prev-icon-reviews{
+  background-image: url("../img/arrow-reviews-left-hover.svg");
+}
+.carousel-control-reviews:hover .carousel-control-next-icon-reviews{
+  background-image: url("../img/arrow-reviews-rigth-hover.svg");
+}
+  
+.carousel-control-next-icon-reviews {
+  background-image: url("../img/arrow-reviews-rigth.svg");
+  width: 55px;
+  height: 55px;
+}
+.carousel-control-reviews{
+  width: 10%;
+}
+@media(max-width: 1450px) {
+  .review-item{
+      width: 40%;
+  }
+}
+
+@media(max-width: 992px) {
+  #carouseReviews .carousel-inner .prev{
+      right: 12%;
+  }
+  #carouseReviews .carousel-inner .next{
+      left: 12%;
+  }
+  .review-item{
+      width: 55%;
+  }
+
+}
+
+@media(max-width: 800px) {
+  .section-reviews{
+      padding: 50px 0px;
+  }
+  .review-item{
+      width: 70%;
+  }
+  #first-hr-sections{
+      display: none;
+  }
+}
+
+@media(max-width: 500px) {
+  #carouseReviews .carousel-inner .prev{
+      right: 3%;
+      opacity: 0.8;
+  }
+  #carouseReviews .carousel-inner .next{
+      opacity: 0.8;
+      left: 3%;
+  }
+  .review-item{
+      width: 92%;
+  }
+
+}
+
+
+
+/* Fim Secção Reviews com Preview */
+
+
+/* Contacta-nos Section */
+
+@media(min-width: 993px) {
+  #content-contact-us{
+      height: calc( 60vh - 170px );
+  }
+  #contact-us-office-info{
+      height: 40vh;
+  }
+}
+
+
 #section-contact-us-first{
   display: flex;
   flex-direction: column;
@@ -2503,7 +2680,6 @@ color: #000000;
   cursor: pointer;
   text-decoration: underline;
 }
-
 
 /* escritórios */
 
@@ -2566,4 +2742,12 @@ color: #000000;
 .contacts_svg{
   margin-top:-3px;
 }
+
+.hover{
+  font-weight: bold;
+  color: #FFFFFF !important;
+  cursor: pointer;
+  text-decoration: underline !important;
+}
+
 /* Fim Contacta-nos Section */
