--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -2429,8 +2429,7 @@ color: #000000;
 
  
 /* Contacta-nos Section */
-
-@media(min-width: 993px) {
+@media (min-width:621px){
   #content-contact-us{
       height: calc( 60vh - 170px );
   }
@@ -2438,7 +2437,6 @@ color: #000000;
       height: 40vh;
   }
 }
-
 
 /* Inicio Secção Reviews com Preview */
 .section-reviews{
@@ -2613,11 +2611,11 @@ color: #000000;
 /* Contacta-nos Section */
 
 @media(min-width: 993px) {
-  #content-contact-us{
-      height: calc( 60vh - 170px );
+  #section-contact-us_first{
+      height: calc( 65vh - 70px );
   }
   #contact-us-office-info{
-      height: 40vh;
+      height: 35vh;
   }
 }
 
@@ -2630,9 +2628,8 @@ color: #000000;
 }
 
 #content-contact-us{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    padding-top: 80px;
+    text-align: center;
 }
 
 #contact_us_title{
@@ -2656,18 +2653,14 @@ color: #000000;
   font-weight: bold;
   font-size: 14px;
   line-height: 24px;
-  /* identical to box height, or 171% */
-
   letter-spacing: 0.35px;
   text-transform: uppercase;
-
-  /* 03. On Primary / Medium Emphasis */
-
   color: rgba(255, 255, 255, 0.74);
   display: flex;
   justify-content:space-around;
   list-style-type:none;
   margin-bottom:45px;
+  margin-top: 20px;
 }
 
 #offices_cities_text li a{ 
@@ -2694,10 +2687,6 @@ color: #000000;
   justify-content: space-between;
 }
 
-.offices_div{
-  margin-left: 10%;
-  align-self: center;
-}
 
 
 .offices_text_class{
@@ -2722,6 +2711,7 @@ color: #000000;
 
   letter-spacing: 0.5px;
   color: #FFFFFF;
+  margin-right:10%;
 }
 
 .construction-lines-office{
@@ -2731,17 +2721,11 @@ color: #000000;
   margin: 0px -7%;
 }
 
-#second_offices_div{
-  margin-left: 0%;
-}
-
-#third_offices_div{
-  margin-left: 0%;
-}
 
 .contacts_svg{
   margin-top:-3px;
 }
+
 
 .hover{
   font-weight: bold;
@@ -2749,5 +2733,70 @@ color: #000000;
   cursor: pointer;
   text-decoration: underline !important;
 }
+/*
+#second_offices_div{
+  margin-left: 0%;
+}
 
+#third_offices_div{
+  margin-left: 0%;
+}*/
+
+.offices_div{
+  margin-left: 10%;
+  align-self: center;
+  width:25%;
+}
+ 
+/* tablet*/
+@media only screen and (max-width: 1004px) {
+  #offices_cities_text li a {
+    padding: 10px 20px;
+}
+}
+
+
+@media only screen and (max-width: 890px) {
+  #offices_cities_text li a {
+    padding: 10px 10px;
+}
+#third_offices_div{
+  margin-right: 10%;
+}
+}
+
+@media only screen and (max-width: 704px) {
+  #offices_cities_text li a {
+    padding: 10px 5px;
+}
+}
+
+/*mobile*/
+@media only screen and (max-width: 620px) {
+  #offices_cities_text li a {
+    padding: 10px 10px;
+}
+#third_offices_div{
+  margin-right: 10%;
+}
+#contact_us_title{
+  font-size: 49px;
+line-height: 56px;
+
+}
+
+.accordion_offices{
+  background:#212121;
+}
+.offices_btn{
+  font-size: 14px;
+line-height: 24px;
+
+letter-spacing: 0.35px;
+text-transform: uppercase;
+
+
+color: #FFFFFF;
+}
+}
 /* Fim Contacta-nos Section */
