--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -2696,10 +2696,6 @@ html, body {
     justify-content: space-between;
   }
   
-  .offices_div{
-    margin-left: 10%;
-    align-self: center;
-  }
   
   
   .offices_text_class{
@@ -2834,6 +2830,69 @@ html, body {
     }
     #accordionOffices{
         margin-bottom: 40px;
+    }
+    
+  }
+  @media only screen and (max-width: 620px) {
+    #offices_cities_text li a {
+      padding: 10px 10px;
+  }
+  #third_offices_div{
+    margin-right: 10%;
+  }
+  #contact_us_title{
+    font-size: 49px;
+  line-height: 56px;
+  
+  }
+  
+  .accordion_offices{
+    background:#212121;
+  }
+  .offices_btn{
+    text-decoration: none;
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.35px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  .offices_btn:hover{
+      color: #FFFFFF;
+  }
+  #section-contact-us{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .card-contact-us, .card-contact-us .card-body{
+        background-color: rgba(33, 33, 33, 0.8);
+        font-family: Ubuntu;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 24px;
+        text-align: center;
+        color: #FFFFFF;
+    }
+    #section-contact-us_first{
+        padding-bottom: 25px;
+    }
+    #accordionOffices{
+        margin-bottom: 40px;
+    }
+  
+    .offices_div{
+      width: 100%;
+      margin-left: 0%;
+    }
+  
+    .horizontal-line{
+      border: 1px solid rgba(255, 255, 255, 0.38);
+      width:30%;
     }
     
   }
