Adicionado click email e morada em dispositivos móveis

--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -2897,7 +2897,7 @@ html, body {
     
   }
 
-  .svg_address{
+  .svg_address, .email_anturio_svg{
       cursor: pointer;
   }
   /* Fim Contacta-nos Section */
