--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1,13 +1,31 @@
+/** 
+ * AnturioSystems
+ *
+ * FICHEIRO CSS, ESTÁ DIVIDIDO POR SECÇÕES
+ * 
+ * @author João Cardoso <joao.martins@anturio.com>
+ * @author Diogo Gomes <diogo.gomes@anturio.com>
+ */
+
+
+/** 
+ *
+ * CSS GLOBAL E NAVBAR
+ *
+ */
+
 html, body {
     margin: 0;
     padding: 0;
     width: 100%;
+    overflow-x: hidden;
 }
 
 body {
     font-family: "Helvetica Neue",sans-serif;
     font-weight: lighter;
     background-color: black;
+    position: relative;
 }
 
 #video-banner {
@@ -24,14 +42,6 @@ header {
     height: 10vh;
     background-size: cover;
 }
-
-/*.content {
-    width: 94%;
-    margin: 4em auto;
-    font-size: 20px;
-    line-height: 30px;
-    text-align: justify;
-}*/
 
 .logo {
     line-height: 60px;
@@ -64,7 +74,6 @@ nav ul {
     line-height: 60px;
     list-style: none;
     background: rgba(0, 0, 0, 0);
-    /*overflow: hidden;*/
     padding: 0;
     text-align: right;
     margin: 0;
@@ -100,10 +109,6 @@ nav ul {
 }
 .social-media svg{
     margin-right: 6px;
-}
-
-.construction_icon_button_slider, .distribution_icon_button_slider, .industry_icon_button_slider, .it_icon_button_slider{
-    cursor: pointer;
 }
 
 body{
@@ -321,7 +326,12 @@ nav ul li a {
 }
 
 
-/* INICIO DIV SOMOS A SOLUÇÃO*/
+/** 
+ *
+ * INICIO DIV SOMOS A SOLUÇÃO
+ *
+ */
+
 
 #we-solution-page{
     display: flex;
@@ -347,7 +357,12 @@ nav ul li a {
     align-content: end;
 }
 
-/* LEFT SIDE */
+/** 
+ *
+ * LEFT SIDE
+ *
+ */
+
 #first-first-img-solution {
     grid-column-start: 2;
     grid-column-end: 2;
@@ -402,7 +417,11 @@ grid-row-end: 1;
     grid-row-start: 5;
     grid-row-end: 5;
 }
-/* RIGHT SIDE */
+/** 
+ *
+ * RIGHT SIDE
+ *
+ */
 
 #first-first-img-solution-right {
     grid-column-start: -2;
@@ -591,10 +610,11 @@ grid-row-end: -1;
 
 }
 
-
-
-
-/* FIM DIV SOMOS A SOLUÇÃO*/
+/** 
+ *
+ * FIM DIV SOMOS A SOLUÇÃO
+ *
+ */
 
 @media(max-width: 992px) {
     #nav-social-language{
@@ -809,27 +829,25 @@ grid-row-end: -1;
     }
 }
 
-/* footer */
+/** 
+ *
+ * FOOTER
+ *
+ */
 .footer {
     clear: both; 
     z-index: 1; 
     height: 100%;
-    /*margin-top: 40em; */
  }
 
 #first_links a{
     text-decoration: none;
-    /* Body 1 */
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
-
-    /* identical to box height, or 162% */
     font-feature-settings: 'salt' on, 'liga' off;
-
-    /* Text / Gray 300 */
     color: #D9DBE1;
 }
 
@@ -844,11 +862,7 @@ grid-row-end: -1;
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
-    /* identical to box height, or 162% */
-
     font-feature-settings: 'salt' on, 'liga' off;
-    
-    /* Text / Gray 300 */
     color: #D9DBE1;
 }
 
@@ -862,8 +876,6 @@ grid-row-end: -1;
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
-
-    /* identical to box height, or 120% */
     letter-spacing: 0.15px;
 }
 #copyright_and_image{
@@ -874,22 +886,13 @@ grid-row-end: -1;
     position: static;
     bottom: 57.14%;
     margin-left: 35%;
-
-    /* Body / Body 2 */
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
-
-    /* identical to box height, or 171% */
     font-feature-settings: 'salt' on, 'liga' off;
-
-    /* Text / Gray 300 */
     color: #D9DBE1;
-
-
-    /* Inside Auto Layout */
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -900,22 +903,13 @@ grid-row-end: -1;
     bottom: 57.14%;
     margin-right:5px;
     margin-left: 35%;
-
-    /* Body / Body 2 */
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
-
-    /* identical to box height, or 171% */
     font-feature-settings: 'salt' on, 'liga' off;
-
-    /* Text / Gray 300 */
     color: #D9DBE1;
-
-
-    /* Inside Auto Layout */
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -1010,9 +1004,6 @@ grid-row-end: -1;
         cursor: pointer;
         }
 
-    
-/* fim footer */
-
 @media only screen and (max-width: 699px) {
     #first_links{
         display:none;
@@ -1098,27 +1089,17 @@ grid-row-end: -1;
         margin-left:0%;
     }
   }
-/* fim footer */
+/** 
+ *
+ * FIM FOOTER
+ *
+ */
 
-/* Especialistas em diferentes setores style */
-
-/*#diferent_sectors{
-    width:auto;
-    position: relative;
-    background: #212121;
-    height: 459px;
-    color: white;
-    margin-bottom: 50px;
-    justify-content: center;
-    align-items: center;
-}*/
-
-html, body {
-    overflow-x: hidden;
-  }
-  body {
-    position: relative;
-  }
+ /** 
+ *
+ * Especialistas em diferentes setores
+ *
+ */
 
 #different_sectors{
     width:auto;
@@ -1136,19 +1117,13 @@ html, body {
     font-weight: 300;
     font-size: 61px;
     float: left;
-
     line-height: 72px;
-/*    position: absolute;
-    left: 231px;
-    top: 162px;
-    width:auto;*/
     align-self:center;
     letter-spacing: -0.5px;
     color: rgba(255, 255, 255, 0.38);
 }
 
 #number_4{
-    /*padding-right: 100px;*/
     align-self:center;
     margin-left: 10%; 
     margin-right:100px;
@@ -1178,11 +1153,8 @@ html, body {
         font-weight: normal;
         font-size: 24px;
         line-height: 24px;
-
         margin-left:auto;
         margin-right:auto;
-       /* flex: 0 0 80px;*/
-
         text-align: center;
         margin-left: 0%;
     }
@@ -1193,17 +1165,10 @@ html, body {
     
 
     #number_4{
-     /*   flex: 0 0 100%;*/
-      /*  padding-right: 40px;*/
         align-self: center;
         justify-content: center;
         margin-left:auto;
         margin-right:auto;
-        /*
-        margin-left:auto;
-        margin-right:auto;
-        text-align: center;
-        */
         padding-bottom: 30px;
         margin-top: 54px;
     }
@@ -1220,7 +1185,6 @@ html, body {
     font-weight: normal;
     font-size: 35px;
     line-height: 36px;
-    /* or 103% */
     padding-left: 10%;
     letter-spacing: 0.25px;
     margin-left:0%;
@@ -1360,10 +1324,7 @@ html, body {
     font-weight: normal;
     font-size: 35px;
     line-height: 36px;
-  
     letter-spacing: 0.25px;
-    /* float: left; temporário */
-  
     align-self:center;
     color: rgba(255, 255, 255, 0.38);
   }
@@ -1404,8 +1365,6 @@ html, body {
     font-size: 35px;
     line-height: 36px;
     padding-left: 10%;
-    /* or 103% */
-    
     letter-spacing: 0.25px;
    }
   
@@ -1436,8 +1395,6 @@ html, body {
       font-weight: 500;
       font-size: 20px;
       line-height: 24px;
-      /* or 120% */
-  
       text-align: center;
       letter-spacing: 0.15px;
   
@@ -1584,7 +1541,6 @@ html, body {
     border: solid 2px #ED1C23;
 }
 .input-message{
-    /*height: 150px;*/
     padding: 15px 5px 135px 10px;
     overflow: hidden;
     resize: none;
@@ -1759,13 +1715,7 @@ html, body {
     }
 }
 
-
-
-
   /* CONTACT US - FIM */
-
-
-
 
 /* INICIO DIV CONSTRUÇÃO */
 #content-homepage-construction, #content-homepage-distribution, #content-homepage-industry {
@@ -1818,8 +1768,6 @@ html, body {
 }
 
 .white-button{
-    /* Button */
-
     font-family: Ubuntu;
     font-style: normal;
     font-weight: 500;
@@ -2651,10 +2599,6 @@ html, body {
     color: #FFFFFF;
     transition: 1s;
   }
-  /*
-  #offices_cities{
-    display: inline;
-  }*/
   
   #offices_cities_text{
     font-family: Ubuntu;
@@ -2687,9 +2631,6 @@ html, body {
   
   #contact-us-office-info{
     background: #212121; 
-   /* display: flex;
-    flex-direction: row;
-    justify-content: center;*/
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -2704,9 +2645,6 @@ html, body {
     font-weight: normal;
     font-size: 24px;
     line-height: 24px;
-    /* identical to box height, or 100% */
-  
-  
     color: #FFFFFF;
   }
   
@@ -2716,8 +2654,6 @@ html, body {
     font-weight: normal;
     font-size: 16px;
     line-height: 24px;
-    /* or 150% */
-  
     letter-spacing: 0.5px;
     color: #FFFFFF;
   }
@@ -2779,7 +2715,6 @@ html, body {
   }
   }
   
-  /*mobile*/
   @media only screen and (max-width: 620px) {
     #offices_cities_text li a {
       padding: 10px 10px;
@@ -2824,59 +2759,7 @@ html, body {
         line-height: 24px;
         text-align: center;
         color: #FFFFFF;
-    }
-    #section-contact-us_first{
-        padding-bottom: 25px;
-    }
-    #accordionOffices{
-        margin-bottom: 40px;
-    }
-    
-  }
-  @media only screen and (max-width: 620px) {
-    #offices_cities_text li a {
-      padding: 10px 10px;
-  }
-  #third_offices_div{
-    margin-right: 10%;
-  }
-  #contact_us_title{
-    font-size: 49px;
-  line-height: 56px;
-  
-  }
-  
-  .accordion_offices{
-    background:#212121;
-  }
-  .offices_btn{
-    text-decoration: none;
-    font-family: Ubuntu;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.35px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-  }
-  .offices_btn:hover{
-      color: #FFFFFF;
-  }
-  #section-contact-us{
-        width: 90%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .card-contact-us, .card-contact-us .card-body{
-        background-color: rgba(33, 33, 33, 0.8);
-        font-family: Ubuntu;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 24px;
-        line-height: 24px;
-        text-align: center;
-        color: #FFFFFF;
+        border-radius: 5px !important;
     }
     #section-contact-us_first{
         padding-bottom: 25px;
