--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -190,6 +190,10 @@ nav ul li a {
     color: #FFFFFF;
 }
 
+#content-first-page #title-1{
+    margin-top: 0px;
+}
+
 #title-2{
     margin-left: 10%;
     font-family: 'Ubuntu';
@@ -225,7 +229,6 @@ nav ul li a {
 
 #more-info{
     margin-left: 10%;
-    margin-bottom: 60px;
 }
 .more-info-button-homepage{
     width: 280px;
@@ -310,9 +313,15 @@ nav ul li a {
     color: rgb(255, 255, 255);
     font-weight: 500;
 }
+#content-first-page{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 45px;
+}
 @media(min-width: 993px) {
     #content-first-page{
-        height: calc( 100vh - 190px );
+        height: calc( 100vh - 90px );
     }
     #content-homepage-construction{
         height: calc( 100vh - 190px );
@@ -826,6 +835,9 @@ grid-row-end: -1;
         flex-direction: column;
         align-items: center;
         margin-left: 0px;
+    }
+    #content-first-page{
+        padding-bottom: 0px;
     }
 }
 
