--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -46,7 +46,9 @@ header {
 .logo {
     line-height: 60px;
     float: left;
-    margin: 16px 46px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    margin-left: 11%;
     color: #fff;
     font-weight: bold;
     font-size: 20px;
@@ -58,7 +60,7 @@ nav {
     width: 100%;
     line-height: 60px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     z-index: 10000;
 }
 
@@ -99,13 +101,16 @@ nav ul {
     margin: 0;
     transition: 1s;
 }
-#language-btn{
+.language-dropdown{
     color: #FFFFFF;
+    margin-right: calc(5.5% - (53.21px / 2));
+    margin-left: calc(5.5% - (53.21px / 2));;
 }
 
 .social-media{
     align-self: center;
-    padding-right: 40px;
+    margin-right: 0px;
+    margin-left: auto;
 }
 .social-media svg{
     margin-right: 6px;
@@ -146,10 +151,6 @@ nav ul li {
     display: inline-block;
     padding: 16px 6px;;
 }
-#nav-social-language{
-    display: flex;
-    justify-content: center;
-}
 
 nav ul li a {
     text-decoration: none;
@@ -174,10 +175,13 @@ nav ul li a {
     color: #fff;
     display: none;
 }
+.menu{
+    margin-left: auto;
+}
 
 
 #title-1{
-    margin-left: 10%;
+    margin-left: 11%;
     margin-top:100px;
     font-family: 'Montserrat';
     font-style: normal;
@@ -195,7 +199,7 @@ nav ul li a {
 }
 
 #title-2{
-    margin-left: 10%;
+    margin-left: 11%;
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 300;
@@ -208,7 +212,7 @@ nav ul li a {
 }
 
 #title-3{
-    margin-left: 10%;
+    margin-left: 11%;
     font-family: 'Montserrat';
     width: 25%;
     font-style: normal;
@@ -223,12 +227,12 @@ nav ul li a {
 #sectors-slider{
     display: flex;
     justify-content: start;
-    margin-left: 10%;
+    margin-left: 11%;
     margin-bottom: 50px;
 }
 
 #more-info{
-    margin-left: 10%;
+    margin-left: 11%;
 }
 .more-info-button-homepage{
     width: 280px;
@@ -626,12 +630,16 @@ grid-row-end: -1;
  */
 
 @media(max-width: 992px) {
-    #nav-social-language{
+    .social-media, #language-btn{
         display: none;
+    }
+    nav{
+        justify-content: center;
     }
     .logo {
         position:absolute;
         top: -5px;
+        margin-left: 0px;
         
     }
     #sectors-text{
@@ -749,7 +757,7 @@ grid-row-end: -1;
     }
     
     #title-3{
-        margin-left: 10%;
+        margin-left: 11%;
         width: 45%;
         font-style: normal;
         font-weight: normal;
@@ -999,6 +1007,7 @@ grid-row-end: -1;
         background: transparent;
         color: #ED1C23;
         border: solid 2px #ED1C23;
+        line-height: 12px;
     }
 
     .dropbtn:hover {
@@ -1123,7 +1132,7 @@ grid-row-end: -1;
     margin-bottom: 0px;
 }
 #especialists_text{
-    margin-left: 10%;
+    margin-left: 11%;
     margin-right: 50px;
     font-family: Ubuntu;
     font-style: normal;
@@ -1144,7 +1153,7 @@ grid-row-end: -1;
 
 #number_4{
     align-self:center;
-    margin-right:10%;
+    margin-right:11%;
 }
 
 #dot_point{
@@ -1740,9 +1749,9 @@ grid-row-end: -1;
 }
 
 .sub-homepage-info{
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 78%;
+    margin-left: 11%;
+    margin-right: 11%;
     display: flex;
     justify-content: space-between;
     position: absolute;
@@ -1800,7 +1809,7 @@ grid-row-end: -1;
     padding: 15px 40px;
     width: 350px;
     height: 80px;
-    margin-right: 10%;
+    margin-right: 11%;
     align-self: center;
 }
 .white-button:hover{
@@ -1821,7 +1830,7 @@ grid-row-end: -1;
     font-size: 49px;
     line-height: 56px;
     color: #FFFFFF;
-    margin-left: 10%;
+    margin-left: 11%;
     width: 50%;
     align-self: center;
     text-align: center;
@@ -1954,7 +1963,7 @@ grid-row-end: -1;
   
   color: #000000;
     width:50%;
-    margin-right: 12%;
+    margin-right: 11%;
     margin-top: 134px;
     margin-left: 1%;
   }
@@ -2078,7 +2087,7 @@ grid-row-end: -1;
     }
     
     .accordion_svgs{
-      margin-left:10%;
+      margin-left: 11%;
     }
     .accordion{
         margin-right: 1%;
@@ -2704,7 +2713,7 @@ grid-row-end: -1;
   
 
 .offices_div{
-    margin-left: 10%;
+    margin-left: 11%;
     align-self: center;
     width:25%;
   }
@@ -2722,7 +2731,7 @@ grid-row-end: -1;
       padding: 10px 10px;
   }
   #third_offices_div{
-    margin-right: 10%;
+    margin-right: 11%;
   }
   }
   
@@ -2737,7 +2746,7 @@ grid-row-end: -1;
       padding: 10px 10px;
   }
   #third_offices_div{
-    margin-right: 10%;
+    margin-right: 11%;
   }
   #contact_us_title{
     font-size: 49px;
